RESOLVED FIXED237647
[WinCairo] SpatialNavigation.h(93): error C2365: 'WebCore::None': redefinition; previous definition was 'enumerator'
https://bugs.webkit.org/show_bug.cgi?id=237647
Summary [WinCairo] SpatialNavigation.h(93): error C2365: 'WebCore::None': redefinitio...
Fujii Hironori
Reported 2022-03-09 04:03:36 PST
[WinCairo] SpatialNavigation.h(93): error C2365: 'WebCore::None': redefinition; previous definition was 'enumerator' https://build.webkit.org/#/builders/38/builds/12550 C:\BW\wincairo-wkl-debug\build\Source\WebCore\page\SpatialNavigation.h(93): error C2365: 'WebCore::None': redefinition; previous definition was 'enumerator' C:\BW\wincairo-wkl-debug\build\Source\WebCore\page\ResourceUsageThread.h(51): note: see declaration of 'WebCore::None' C:\BW\wincairo-wkl-debug\build\Source\WebCore\page\SpatialNavigation.h(104): error C2440: 'initializing': cannot convert from 'WebCore::ResourceUsageCollectionMode' to 'WebCore::RectsAlignment' C:\BW\wincairo-wkl-debug\build\Source\WebCore\page\SpatialNavigation.h(104): note: Conversion to enumeration type requires an explicit cast (static_cast, C-style cast or function-style cast) C:\BW\wincairo-wkl-debug\build\Source\WebCore\page\SpatialNavigation.h(107): error C2439: 'WebCore::FocusCandidate::alignment': member could not be initialized C:\BW\wincairo-wkl-debug\build\Source\WebCore\page\SpatialNavigation.h(124): note: see declaration of 'WebCore::FocusCandidate::alignment' C:\BW\wincairo-wkl-debug\build\Source\WebCore\page/SpatialNavigation.cpp(63): error C2440: 'initializing': cannot convert from 'WebCore::ResourceUsageCollectionMode' to 'WebCore::RectsAlignment' C:\BW\wincairo-wkl-debug\build\Source\WebCore\page/SpatialNavigation.cpp(63): note: Conversion to enumeration type requires an explicit cast (static_cast, C-style cast or function-style cast) C:\BW\wincairo-wkl-debug\build\Source\WebCore\page/SpatialNavigation.cpp(66): error C2439: 'WebCore::FocusCandidate::alignment': member could not be initialized C:\BW\wincairo-wkl-debug\build\Source\WebCore\page\SpatialNavigation.h(124): note: see declaration of 'WebCore::FocusCandidate::alignment' C:\BW\wincairo-wkl-debug\build\Source\WebCore\page/SpatialNavigation.cpp(99): error C2440: 'return': cannot convert from 'WebCore::ResourceUsageCollectionMode' to 'WebCore::RectsAlignment' C:\BW\wincairo-wkl-debug\build\Source\WebCore\page/SpatialNavigation.cpp(99): note: Conversion to enumeration type requires an explicit cast (static_cast, C-style cast or function-style cast) C:\BW\wincairo-wkl-debug\build\Source\WebCore\page/SpatialNavigation.cpp(107): error C2440: 'return': cannot convert from 'WebCore::ResourceUsageCollectionMode' to 'WebCore::RectsAlignment' C:\BW\wincairo-wkl-debug\build\Source\WebCore\page/SpatialNavigation.cpp(107): note: Conversion to enumeration type requires an explicit cast (static_cast, C-style cast or function-style cast) C:\BW\wincairo-wkl-debug\build\Source\WebCore\page/SpatialNavigation.cpp(98): warning C4390: ';': empty controlled statement found; is this the intent?
Attachments
Patch (4.39 KB, patch)
2022-03-09 04:18 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-03-09 04:18:59 PST
EWS
Comment 2 2022-03-09 05:30:29 PST
Committed r291044 (248218@main): <https://commits.webkit.org/248218@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454227 [details].
Radar WebKit Bug Importer
Comment 3 2022-03-09 05:31:16 PST
Note You need to log in before you can comment on or make changes to this bug.