[WinCairo] SpatialNavigation.h(93): error C2365: 'WebCore::None': redefinition; previous definition was 'enumerator' https://bugs.webkit.org/show_bug.cgi?id=237647

Unreviewed build fix.

Changed WebCore::RectsAlignment to an enum class.


* page/FocusController.cpp:
(WebCore::updateFocusCandidateIfNeeded):
* page/SpatialNavigation.cpp:
(WebCore::FocusCandidate::FocusCandidate):
(WebCore::alignmentForRects):
(WebCore::distanceDataForNode):
* page/SpatialNavigation.h:
(WebCore::FocusCandidate::FocusCandidate):
(): Deleted.



Canonical link: https://commits.webkit.org/248218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291044 268f45cc-cd09-0410-ab3c-d52691b4dbfc